--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.8.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
     "xlsx": "^0.18.5",
     "ziad-button-2025": "^1.4.14"
